# projectq

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  init_db.sql  pyproject.toml  requirements.txt
config/: settings.py  urls.py
src/: manage.py
src/bookings/: models.py  serializers.py  urls.py  views.py
src/bookings/migrations/: 0001_initial.py
src/core/models/: __init__.py
src/core/repositories/: booking_repository.py  room_repository.py
src/core/services/: booking_services.py  room_services.py
src/rooms/: models.py  serializers.py  urls.py  views.py
src/rooms/migrations/: 0001_initial.py
src/tests/: test_repositories.py  test_services.py  test_views.py
